--- a/tour.html
+++ b/tour.html
@@ -5,13 +5,17 @@
     <head>
     	<title>WorldChanger - Change your world now!</title>
 
+    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+		<link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" rel="stylesheet" type="text/css">
+
         <script src="assets/javascripts/vendor/jquery-2.0.3.min.js"></script>
         <script src="assets/javascripts/vendor/prismic.io.js"></script>
-        <script src="assets/javascripts/app.js"></script>
-        <script src="assets/javascripts/bootstrap.min.js"></script>
+        <script src="assets/javascripts/common.js"></script>
+        <script src="assets/javascripts/tour.js"></script>
+        <script src="assets/javascripts/vendor/bootstrap.min.js"></script>
 
-	  	<link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css">
 	  	<link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap.min.css">
+	  	<link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css">
 	  	<link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
 
     </head>
