--- a/about.html
+++ b/about.html
@@ -23,34 +23,7 @@
     <body>
     	<div class="wrapper">
 			
-		    <header class="navbar navbar-worldchanger" role="navigation">
-		        <div class="container">
-
-		        	<div class="navbar-header">
-		        		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-navbar">
-		        			<span class="sr-only">Toggle navigation</span>
-		        			<span class="icon-bar"></span>
-		        			<span class="icon-bar"></span>
-		        			<span class="icon-bar"></span>
-	        			</button>
-        				<a class="navbar-brand" href="/">WorldChanger</a>
-	        		</div>
-
-	        		<div class="navbar-collapse collapse" id="top-navbar">
-		        		<ul class="nav navbar-nav navbar-right">
-				          	<li><a href="/">Home</a></li>
-				          	<li><a href="/tour.html">Product tour</a></li>
-				          	<li><a href="/pricing.html">Pricing</a></li>
-				          	<li><a href="/faq.html">FAQ</a></li>
-				          	<li class="active"><a href="/about.html">About us</a></li>
-				          	<li><a href="/blog.html">Blog</a></li>
-				        </ul>
-		        	</div>
-		        </div>
-	       	</header>
-
-	       	<div class="container">
-	       	</div>
+		    <div id="menu"></div>
 
 	       	<article id="about">
 	       		<script type="text/template">
@@ -84,18 +57,7 @@
 	    		</script>
 	       	</article>
 
-	       	<div class="footer-container">
-	       		<footer class="container">
-	       			<p>
-	       				WorldChanger is an example website to be used freely on top of the 
-	       				<a href="http://prismic.io">prismic.io</a>
-	       				writing-room and content query API.
-	       			</p>
-	       			<p>
-	       				<a href="/signin">Sign in to preview changes</a>
-	       			</p>
-	       		</footer>
-	       	</div>
+	       	<div id="footer"></div>
 		
 	    </div>
 	</body>
