--- a/faq.html
+++ b/faq.html
@@ -23,34 +23,7 @@
     <body>
     	<div class="wrapper">
 			
-		    <header class="navbar navbar-worldchanger" role="navigation">
-		        <div class="container">
-
-		        	<div class="navbar-header">
-		        		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-navbar">
-		        			<span class="sr-only">Toggle navigation</span>
-		        			<span class="icon-bar"></span>
-		        			<span class="icon-bar"></span>
-		        			<span class="icon-bar"></span>
-	        			</button>
-        				<a class="navbar-brand" href="/">WorldChanger</a>
-	        		</div>
-
-	        		<div class="navbar-collapse collapse" id="top-navbar">
-		        		<ul class="nav navbar-nav navbar-right">
-				          	<li><a href="/">Home</a></li>
-				          	<li><a href="/tour.html">Product tour</a></li>
-				          	<li><a href="/pricing.html">Pricing</a></li>
-				          	<li class="active"><a href="/faq.html">FAQ</a></li>
-				          	<li><a href="/about.html">About us</a></li>
-				          	<li><a href="/blog.html">Blog</a></li>
-				        </ul>
-		        	</div>
-		        </div>
-	       	</header>
-
-	       	<div class="container">
-	       	</div>
+		    <div id="menu"></div>
 
 	       	<article id="faq">
 	       		<script type="text/template">
@@ -62,44 +35,14 @@
 						<%= faq.getStructuredText('article.lede') ? faq.getStructuredText('article.lede').asHtml(ctx) : '' %>
 					</div>
 
-					<div class="panel-group" id="accordion">
-						<% questions.forEach(function (question, i) { %>
-							<div class="panel">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordion" href="#<%= question.id %>" class="collapsed">
-											<%= question.getStructuredText('faq.question') ? question.getStructuredText('faq.question').getTitle().text : '' %>
-											<span class="accordion-arrow down">&#9660;</span><span class="accordion-arrow up">&#9650;</span>
-										</a>
-									</h4>
-								</div>
-								<div id="<%= question.id %>" class="panel-collapse collapse<%= i==0 ? ' in' : '' %>">
-									<div class="panel-body">
-										<%= question.getStructuredText('faq.answer') ? question.getStructuredText('faq.answer').asHtml(ctx) : '' %>
-									</div>
-								</div>
-
-							</div>
-						<% });  %>
-					</div>
+					<div id="faqaccordion"></div>
 
 				</div>
 
 	    		</script>
 	       	</article>
 
-	       	<div class="footer-container">
-	       		<footer class="container">
-	       			<p>
-	       				WorldChanger is an example website to be used freely on top of the 
-	       				<a href="http://prismic.io">prismic.io</a>
-	       				writing-room and content query API.
-	       			</p>
-	       			<p>
-	       				<a href="/signin">Sign in to preview changes</a>
-	       			</p>
-	       		</footer>
-	       	</div>
+	       	<div id="footer"></div>
 		
 	    </div>
 	</body>
