--- a/blogsearch.html
+++ b/blogsearch.html
@@ -13,7 +13,7 @@
         <script src="assets/javascripts/vendor/bootstrap.min.js"></script>
         <script src="assets/javascripts/vendor/moment.min.js"></script>
         <script src="assets/javascripts/common.js"></script>
-        <script src="assets/javascripts/blog.js"></script>
+        <script src="assets/javascripts/blogsearch.js"></script>
 
 	  	<link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap.min.css">
 	  	<link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css">
