--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WorldChanger - Change your world now!</title>
+    <title>WorldChanger</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" rel="stylesheet" type="text/css">
     <script src="assets/javascripts/vendor/jquery-2.0.3.min.js"></script>
@@ -17,6 +17,7 @@
   <body>
     <div class="wrapper">
       <div id="menu"></div>
+      <div id="refselect"></div>
       <div class="container">
         <div id="blog-nav" class="row">
           <div class="col-md-offset-9 col-md-3 blog-search">
