--- a/tour.html
+++ b/tour.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WorldChanger - Change your world now!</title>
+    <title>WorldChanger - Product tour</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" rel="stylesheet" type="text/css">
     <script src="assets/javascripts/vendor/jquery-2.0.3.min.js"></script>
     <script src="assets/javascripts/vendor/prismic.io.js"></script>
     <script src="assets/javascripts/vendor/bootstrap.min.js"></script>
+    <script src="assets/javascripts/vendor/moment.min.js"></script>
     <script src="assets/javascripts/common.js"></script>
     <script src="assets/javascripts/tour.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap.min.css">
@@ -16,6 +17,7 @@
   <body>
     <div class="wrapper">
       <div id="menu"></div>
+      <div id="refselect"></div>
       <article id="tour">
         <script type="text/template">
           <div class="container">
@@ -26,12 +28,12 @@
           </div>
           <div id="<%= argPhoto.id %>" class="large-image large-bright-image container">
             <style type="text/css">
-              #<%= argPhoto.id %> {background-image: url(<%= argPhoto.getImage("argument.photo").views.large.url %>)}
+              #<%= argPhoto.id %> {background-image: url(<%= argPhoto.getImageView("argument.photo","large").url %>)}
               @media (max-width: 992px) {
-              #<%= argPhoto.id %> {background-image: url(<%= argPhoto.getImage("argument.photo").views.medium.url %>)}
+              #<%= argPhoto.id %> {background-image: url(<%= argPhoto.getImageView("argument.photo","medium").url %>)}
               }
               @media (max-width: 500px) {
-              #<%= argPhoto.id %> {background-image: url(<%= argPhoto.getImage("argument.photo").views.small.url %>)}
+              #<%= argPhoto.id %> {background-image: url(<%= argPhoto.getImageView("argument.photo","small").url %>)}
               }
             </style>
             <div class="row">
@@ -44,12 +46,12 @@
           <div class="container">
             <div class="row">
               <div id="<%= args[0].id %>" class="half-regular col-sm-5 col-sm-offset-1">
-                <img class="icon" src="<%= args[0].getImage('argument.icon') && args[0].getImage('argument.icon').views.small ? args[0].getImage('argument.icon').views.small.url : '' %>">
+                <img class="icon" src="<%= args[0].getImage('argument.icon') && args[0].getImageView('argument.icon','small') ? args[0].getImageView('argument.icon','small').url : '' %>">
                 <h2><%= args[0].getStructuredText('argument.title') ? args[0].getStructuredText('argument.title').getTitle().text : '' %></h2>
                 <%= args[0].getStructuredText('argument.description') ? args[0].getStructuredText('argument.description').asHtml(ctx) : '' %>
               </div>
               <div id="<%= args[1].id %>" class="half-regular col-sm-5 col-sm-offset-1">
-                <img class="icon" src="<%= args[1].getImage('argument.icon') && args[1].getImage('argument.icon').views.small ? args[1].getImage('argument.icon').views.small.url : '' %>">
+                <img class="icon" src="<%= args[1].getImage('argument.icon') && args[1].getImageView('argument.icon','small') ? args[1].getImageView('argument.icon','small').url : '' %>">
                 <h2><%= args[1].getStructuredText('argument.title') ? args[1].getStructuredText('argument.title').getTitle().text : '' %></h2>
                 <%= args[1].getStructuredText('argument.description') ? args[1].getStructuredText('argument.description').asHtml(ctx) : '' %>
               </div>
@@ -57,12 +59,12 @@
           </div>
           <div id="<%= argPanoramaphoto.id %>" class="large-image large-dark-image">
             <style type="text/css">
-              #<%= argPanoramaphoto.id %> {background-image: url(<%= argPanoramaphoto.getImage('argument.panoramaphoto').views.large.url %>)}
+              #<%= argPanoramaphoto.id %> {background-image: url(<%= argPanoramaphoto.getImageView('argument.panoramaphoto','large').url %>)}
               @media (max-width: 992px) {
-              #<%= argPanoramaphoto.id %> {background-image: url(<%= argPanoramaphoto.getImage('argument.panoramaphoto').views.medium.url %>)}
+              #<%= argPanoramaphoto.id %> {background-image: url(<%= argPanoramaphoto.getImageView('argument.panoramaphoto','medium').url %>)}
               }
               @media (max-width: 500px) {
-              #<%= argPanoramaphoto.id %> {background-image: url(<%= argPanoramaphoto.getImage('argument.panoramaphoto').views.small.url %>)}
+              #<%= argPanoramaphoto.id %> {background-image: url(<%= argPanoramaphoto.getImageView('argument.panoramaphoto','small').url %>)}
               }
             </style>
             <div class="container">
@@ -84,7 +86,7 @@
             </div>
           </div>
           <% for (var i = 4; i < args.length ; i++) { %>
-             <div id="<%= args[i].id %>" class="container regular" style="background-image: url('<%= args[i].getImage('argument.icon') && args[i].getImage('argument.icon').views.small ? args[i].getImage('argument.icon').views.small.url : '' %>')">
+             <div id="<%= args[i].id %>" class="container regular" style="background-image: url('<%= args[i].getImage('argument.icon') && args[i].getImageView('argument.icon','small') ? args[i].getImageView('argument.icon','small').url : '' %>')">
                <h2><%= args[i].getStructuredText('argument.title') ? args[i].getStructuredText('argument.title').getTitle().text : '' %></h2>
                <%= args[i].getStructuredText('argument.description') ? args[i].getStructuredText('argument.description').asHtml(ctx) : '' %>
              </div>
